--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -32,3 +32,8 @@ $grey-color-dark:     darken($grey-color, 25%);
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
+
+// OSU Colors
+$scarlet-color: #bb0000;
+$scarlet-color-hover: #5d0000;
+$osu-grey: #666666;
