--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -5,12 +5,13 @@
 :root {
   --global-bg-color: #{$white-color};
   --global-text-color: #{$black-color};
-  --global-theme-color: #{$purple-color};
-  --global-hover-color: #{$light-purple-color};
+  --global-theme-color: #{$scarlet-color};
+  --global-hover-color: #{$scarlet-color-hover};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
   --global-icon-color: #{$grey-color-dark};
+  --nav-bar-bg-color: #{$osu-grey};
 
   .fa-sun {
     display : none;
