--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -31,7 +31,16 @@
 
 // TODO: redefine content layout.
 
-
+.test {
+  color: $grey-color-light;
+  &:hover {
+    color: var(--global-theme-color);
+    text-decoration: none;
+  }
+  &:hover:after {
+    width: 100%;
+  }
+}
 /******************************************************************************
  * Publications
  ******************************************************************************/
