--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -64,11 +64,21 @@ a, table.table a {
 .post-description {
   margin-bottom: 1.5rem;
   font-size: 14px;
+  font-family: 'Montserrat', sans-serif;
   a {
-    color: $osu-grey;
+    background: linear-gradient(to bottom, $scarlet-color 0%, $scarlet-color 100%);
+    background-position: 0 100%;
+    background-repeat: repeat-x;
+    background-size: 4px 0px;
+    color: #666666;
+    text-decoration: none;
+    transition: background-size .2s;
+    // color: $osu-grey;
     &:hover {
-      color: $scarlet-color-hover;
-      text-decoration: none;
+      color: #ffffff;
+      background-size: 4px 50px;
+      // color: $scarlet-color-hover;
+      // text-decoration: none;
     }
   }
 }
@@ -80,7 +90,7 @@ a, table.table a {
   box-shadow: none;
   border-bottom: 6px solid $scarlet-color;
   opacity: 0.95;
-  background-color: var(--nav-bar-bg-color);
+  background-image: linear-gradient(#292929, #222222, #292929);
   min-height: 50px;
 }
 .navbar.navbar-light {
@@ -94,6 +104,7 @@ a, table.table a {
     color: var(--global-text-color);
   }
   .navbar-nav .nav-item .nav-link {
+    color: #ffff;
     &:hover {
       color: var(--global-hover-color);
     }
@@ -121,7 +132,7 @@ a, table.table a {
     display: block;
     width: 22px;
     height: 2px;
-    background-color: $grey-color-dark;
+    background-color: #ddd;
     border-radius: 1px;
     margin-bottom: 4px;
     transition: all 0.2s;
@@ -205,6 +216,7 @@ footer.sticky-bottom {
   padding-top: 10px;
   padding-bottom: 10px;
   font-size: 0.8rem;
+  text-align: center;
 }
 
 
