--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -72,7 +72,7 @@ a, table.table a {
     background-size: 4px 0px;
     color: #666666;
     text-decoration: none;
-    transition: background-size .2s;
+    transition: background-size .25s;
     // color: $osu-grey;
     &:hover {
       color: #ffffff;
@@ -101,12 +101,15 @@ a, table.table a {
     }
   }
   .navbar-brand {
-    color: var(--global-text-color);
+    color: #b3b3b3;
+    &:hover {
+      color: #ffffff;
+    }
   }
   .navbar-nav .nav-item .nav-link {
-    color: #ffff;
+    color: #b3b3b3;
     &:hover {
-      color: var(--global-hover-color);
+      color: #ffffff;
     }
   }
   .navbar-nav .nav-item.active>.nav-link {
@@ -114,7 +117,7 @@ a, table.table a {
       font-weight: bolder;
       color: var(--global-theme-color);
       &:hover {
-        color: var(--global-hover-color);
+        color: #960000;
       }
   }
   .contact-icon {
