--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,6 +4,9 @@
 
 // Typography
 
+p, h1, h2, h3, h4, h5, h6, em, div, span, strong {
+  color: var(--global-text-color);
+}
 
 a, table.table a {
   color: var(--global-theme-color);
@@ -32,6 +35,10 @@ a, table.table a {
   text-align: center;
 }
 
+// Citation
+.citation, .citation-number {
+  color: var(--global-theme-color);
+}
 
 // Profile
 
@@ -120,15 +127,24 @@ a, table.table a {
         color: #960000;
       }
   }
-  .contact-icon {
-    font-size: 2rem;
+  .navbar-brand.social {
+    padding-bottom: 0;
+    padding-top: 0;
+    font-size: 1.7rem;
     a {
+      i::before {
+        color: var(--global-text-color);
+        -webkit-transition: all 0.2s ease-in-out;
+      }
       &:hover {
-        color: var(--global-hover-color);
+        i::before {
+          color: var(--global-theme-color);
+        }
       }
     }
   }
 }
+
 
 .navbar-toggler {
   .icon-bar {
@@ -181,12 +197,17 @@ a, table.table a {
 
 .social {
   text-align: center;
-  .contact-icon {
+  .contact-icons {
     font-size: 4rem;
     a {
-      color: var(--global-icon-color);
+      i::before {
+        color: var(--global-text-color);
+        -webkit-transition: all 0.2s ease-in-out;
+      }
       &:hover {
-        color: var(--global-theme-color);
+        i::before {
+          color: var(--global-theme-color);
+        }
       }
     }
   }
@@ -260,10 +281,21 @@ footer.sticky-bottom {
   }
 }
 
-.pagination .page-item.active .page-link {
-  background-color: var(--global-theme-color);
-  &:hover {
-    background-color: var(--global-theme-color);
+.pagination {
+  .page-item {
+    .page-link {
+      color: var(--global-text-color);
+      &:hover {
+        color: $black-color;
+      }
+    }
+    &.active .page-link {
+      color: $white-color;
+      background-color: var(--global-theme-color);
+      &:hover {
+        background-color: var(--global-theme-color);
+      }
+    }
   }
 }
 
@@ -281,19 +313,56 @@ footer.sticky-bottom {
 // Projects
 
 .projects {
+  .card-item {
+    width: auto;
+    margin-bottom: 10px;
+
+    a {
+      text-decoration: none;
+    }
+
+    .row {
+      display: flex;
+      align-items: center;
+    }
+
+    .card {
+      img {
+        width: 100%;
+      }
+    }
+  }
+
   .grid-item {
     width: 250px;
     margin-bottom: 10px;
+
     a {
       color: black;
       text-decoration: none;
+
       &:hover {
         color: var(--global-theme-color);
       }
     }
+
+    .card {
+      img {
+        width: 100%;
+      }
+      .card-title {
+        color: $black-color;
+      }
+    }
   }
-  .card img {
-    width: 100%;
+
+  h2.category {
+    color: $grey-color-light;
+    border-bottom: 1px solid $grey-color-light;
+    padding-top: 0.5rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    text-align: right;
   }
 }
 
@@ -410,19 +479,40 @@ footer.sticky-bottom {
         transition: all 0.15s ease;
       }
       div.abstract.hidden {
-        border: dashed 1px white;
+        border: dashed 1px var(--global-bg-color);
       }
       div.abstract.hidden.open {
-        border-color: $grey-color;
+        border-color: var(--global-text-color);
       }
     }
   }
 }
 
 // Rouge Color Customization
+figure.highlight {
+  margin: 0 0 1rem;
+}
+
+pre {
+  color: var(--global-theme-color);
+  background-color: var(--global-code-bg-color);
+  border-radius: 6px;
+  padding: 6px 12px;
+  pre, code {
+    background-color: transparent;
+    border-radius: 0;
+    padding: 0;
+  }
+}
+
 code {
   color: var(--global-theme-color);
+  background-color: var(--global-code-bg-color);
+  border-radius: 3px;
+  padding: 3px 3px;
 }
+
+
 // Transitioning Themes
 html.transition,
 html.transition *,
