--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,9 +3,6 @@
  * To adjust anything, simply edit the variables below and rebuild the theme.
  ******************************************************************************/
 
-// Dimensions
-
-$max-content-width: 800px;
 
 // Colors
 $red-color:           #FF3636 !default;
@@ -33,7 +30,12 @@ $grey-color-dark:     darken($grey-color, 25%);
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
-// OSU Colors
+
+// Theme colors
+
+$code-bg-color-light:     rgba($purple-color, 0.05);
+$code-bg-color-dark:      #2c3237 !default;
+
 $scarlet-color: #bb0000;
 $scarlet-color-hover: #5d0000;
 $osu-grey: #666666;
